# timekeeper

./: .gitignore  .pre-commit-config.yaml  .tmuxrc  CLAUDE.md  LICENSE  README.md  adapters.py  alias.fish  devbox.json  entities.py  errors.py  flake.nix  main.py  pyproject.toml  tests.py  timekeeper.py  use_cases.py
.github/workflows/: ci.yml
timekeeper/: adapters.py  cli.py  config.py  entities.py  services.py  use_cases.py
