[project]
name = "timekeeper"
version = "0.5.0"
authors = [
  { name="David Bellotti" },
]
description="A simple time tracking tool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dbellotti/timekeeper"
Issues = "https://github.com/dbellotti/timekeeper/issues"

[project.scripts]
tk = "timekeeper.cli:main"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "I", "F"]
