[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timekeeper"
version = "0.6.0"
authors = [
  { name="David Bellotti" },
]
description="A flexible time tracking CLI with role-based rates and custom vault directories"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dbellotti/timekeeper"
Issues = "https://github.com/dbellotti/timekeeper/issues"

[project.scripts]
tk = "timekeeper.cli:main"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "I", "F"]
